# astria-rpc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pull-request.yml  push.yml
execution-apis/: build.rs
execution-apis/proto/execution/v1/: execution.proto
execution-apis/src/: execution.v1.rs  execution.v1.tonic.rs  lib.rs
sequencer-relayer/: Cargo.toml  buf.gen.yaml  buf.yaml
sequencer-relayer/proto/sequencer_relayer/v1/: block.proto  data.proto
